--- a/angular/app/main/main.html
+++ b/angular/app/main/main.html
@@ -37,28 +37,29 @@
 
 <section>
   <div class="container">
-    <h2>Core Javascript</h2>
+    <section>
+      <h2>Core Javascript</h2>
 
-    <hr class="star-primary">
+      <hr class="star-primary">
 
-    <table class="table table-hover table-striped">
-      <colgroup>
-        <col>
-        <col style="width: 35%;">
-        <col style="width: 15%;">
-      </colgroup>
+      <table class="table table-hover table-striped">
+        <colgroup>
+          <col>
+          <col style="width: 35%;">
+          <col style="width: 15%;">
+        </colgroup>
 
-    	<thead>
-    		<tr>
-    			<th></th>
-    			<th>Expertise</th>
-    			<th>Years of Experience</th>
-    		</tr>
-    	</thead>
-    	<tbody>
-    		<tr>
-    			<td>Cross Browser Development</td>
-    			<td>
+        <thead>
+        <tr>
+          <th></th>
+          <th>Expertise</th>
+          <th>Years of Experience</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Cross Browser Development</td>
+          <td>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-primary">
                 <input type="radio" name="options" id="option1" autocomplete="off"> Basic
@@ -71,8 +72,8 @@
               </label>
             </div>
           </td>
-    			<td></td>
-    		</tr>
+          <td></td>
+        </tr>
         <tr>
           <td>Regular Expressions</td>
           <td>
@@ -109,165 +110,170 @@
           </td>
           <td></td>
         </tr>
-    	</tbody>
-    </table>
+        </tbody>
+      </table>
+    </section>
 
-    <h2>OOP Javascript</h2>
+    <section>
+      <h2>OOP Javascript</h2>
 
-    <hr class="star-primary">
+      <hr class="star-primary">
 
-    <table class="table table-hover table-striped">
-      <colgroup>
-        <col>
-        <col style="width: 35%;">
-        <col style="width: 15%;">
-      </colgroup>
+      <table class="table table-hover table-striped">
+        <colgroup>
+          <col>
+          <col style="width: 35%;">
+          <col style="width: 15%;">
+        </colgroup>
 
-      <thead>
-      <tr>
-        <th></th>
-        <th>Expertise</th>
-        <th>Years of Experience</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>Creating custom JS Classes</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+        <thead>
+        <tr>
+          <th></th>
+          <th>Expertise</th>
+          <th>Years of Experience</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Creating custom JS Classes</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Binding Events</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Binding Events</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>OOP Javascript</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>OOP Javascript</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Closures</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Closures</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      </tbody>
-    </table>
+          </td>
+          <td></td>
+        </tr>
+        </tbody>
+      </table>
+    </section>
 
   </div>
 </section>
 
 <section>
   <div class="container">
-    <h2>CSS</h2>
+    <section>
+      <h2>CSS</h2>
 
-    <hr class="star-primary">
+      <hr class="star-primary">
 
-    <table class="table table-hover table-striped">
-      <colgroup>
-        <col>
-        <col style="width: 35%;">
-        <col style="width: 15%;">
-      </colgroup>
+      <table class="table table-hover table-striped">
+        <colgroup>
+          <col>
+          <col style="width: 35%;">
+          <col style="width: 15%;">
+        </colgroup>
 
-      <thead>
-      <tr>
-        <th></th>
-        <th>Expertise</th>
-        <th>Years of Experience</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>CSS 3</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+        <thead>
+        <tr>
+          <th></th>
+          <th>Expertise</th>
+          <th>Years of Experience</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>CSS 3</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>CSS 3 transitions and animations</td>
-        <td>
-          <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option1" autocomplete="off"> Basic
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option2" autocomplete="off"> Developer
-            </label>
-            <label class="btn btn-primary">
-              <input type="radio" name="options" id="option3" autocomplete="off"> Expert
-            </label>
-          </div>
+          </td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>CSS 3 transitions and animations</td>
+          <td>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option1" autocomplete="off"> Basic
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option2" autocomplete="off"> Developer
+              </label>
+              <label class="btn btn-primary">
+                <input type="radio" name="options" id="option3" autocomplete="off"> Expert
+              </label>
+            </div>
 
-        </td>
-        <td></td>
-      </tr>
-      </tbody>
-    </table>
+          </td>
+          <td></td>
+        </tr>
+        </tbody>
+      </table>
+    </section>
   </div>
 </section>
 
